# lore-desktop

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.githooks/: pre-commit
scripts/: fetch-liblore.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  daemon.rs  diff_tools.rs  lib.rs  lock_manager.rs  main.rs  mock.rs  models.rs  state.rs  streaming.rs
src-tauri/src/lore/: cli.rs  ffi.rs  mock.rs  mod.rs  parse.rs
src/api/: lore.ts
src/components/: ChangesList.tsx  CommitBox.tsx  DetailPane.tsx  HistoryList.tsx  Toolbar.tsx  TransferOverlay.tsx
src/lib/: format.ts
src/store/: loreStore.ts
src/types/: lore.ts
