[package]
name = "lore-desktop"
version = "0.1.0"
description = "High-performance multiplatform desktop client for Lore VCS"
authors = ["lore-desktop contributors"]
edition = "2021"
rust-version = "1.77"

# The lib is what Tauri's mobile/desktop entrypoints call into. `cdylib` is
# required for mobile targets; `staticlib`/`rlib` keep desktop linking happy.
[lib]
name = "lore_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Only pulled in for the `liblore` feature: generates Rust bindings from lore.h.
bindgen = { version = "0.69", optional = true }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Async runtime for the daemon controller / streaming (Phases 2 & 4).
tokio = { version = "1", features = ["full"] }
# Structured logging.
log = "0.4"
# Async methods on the LoreClient trait.
async-trait = "0.1"
# Parsing the RFC-2822 timestamps in `lore lock status` output -> ISO-8601.
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
# Lore's content hash, used by the streaming ingest to compute fragment addresses.
blake3 = "1"
# Filesystem watching for the cross-platform live-update daemon.
notify = "6"

[features]
# Phase D: bind directly to liblore (in-process, structured, event-driven)
# instead of shelling out to the `lore` CLI. Off by default — the default build
# uses the CLI wrapper / mock. Enabling it requires the vendored shared library
# (run `scripts/fetch-liblore.sh`) and pulls in bindgen to generate bindings.
liblore = ["dep:bindgen"]

# Aggressive local builds on the M3 Max: thin LTO + all codegen units in dev for
# fast incremental compiles, full optimization for release artifacts.
[profile.dev]
opt-level = 1
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
